k8s/soa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soa
spec:
  selector:
    app: soa
  ports:
    - protocol: TCP
      port: 76
      targetPort: 8000
  type: ClusterIP
