k8s/soa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soa
spec:
  ingressClassName: nginx
  rules:
    - host: "prj-1774348373939827546.84.201.145.23.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soa
                port:
                  number: 80
